--- a/styles/scss/blocks/_dialog.scss
+++ b/styles/scss/blocks/_dialog.scss
@@ -1,7 +1,21 @@
+//md-dialog md-expansion-panel-group span, md-dialog md-expansion-panel-group input {
+//    color: $color-grey-50 !important;
+//}
+
 md-dialog {
 
-    input, label {
-        color: $color-black-op-87 !important;
-        font-weight: 300;
+    md-expansion-panel-group {
+
+         span, input {
+             color: $color-grey-50 !important;
+         }
+     }
+
+    md-input-container {
+
+        input, label {
+            color: $color-black-op-87 !important;
+            font-weight: 300;
+        }
     }
 }
