--- a/styles/scss/blocks/_inputs.scss
+++ b/styles/scss/blocks/_inputs.scss
@@ -1,10 +1,6 @@
 // Global changes
 md-dialog {
 
-    span {
-        color: $color-black-op-87 !important;
-    }
-
     md-select-value {
         color: $color-black-op-87 !important;
     }
